Fix horizontal scrolling

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,9 +2,6 @@
   /* The image used */
   background-image: url("/img/karl.jpg");
 
-  /* Full height */
-  height: 100%; 
-
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
